Finished site layout

--- a/index.html
+++ b/index.html
@@ -9,35 +9,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lora:400' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
     <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-    <section class="wrapper">
-        <div class="div-1">
-            I was born near the mountains in a city of West Virginia. I shortly found myself growing up near the beaches
-            of
-            Virginia. You could say it was quite the change of scenery.
+    <section class="flex-container">
+        <header>
+            <h1>Hi, I'm Kelsie.</h1>
+        </header>
+        <main>
+            <p>I'm a <span>Frontend Developer Student</span> who's excited to test her bounds of creativity and
+                problem-solving. When I'm not spending time in a text editor, you can find me playing with my two cats
+                or watching Marvel movies for the thousandth time.</p>
+        </main>
+        <div id="div-1" class="flex-items">
+            <p>I was born in West Virginia but I grew up in Virginia. I spent most of my childhood drawing, painting,
+                and coloring. You can find me in some sort of adult coloring book to this day. It's a guilty pleasure, I
+                guess!
+            </p>
         </div>
-        <div class="div-2">
-            I have always loved doing anything that involved creativity and colors. My grandma was a preschool teacher
-            and had a huge
-            influence on my early education and creativity.
+        <div id="div-2" class="flex-items">
+            <p>I'm learning web development because I want to create an easier work/life balance. I am drawn to the idea
+                of more free time and financial stability.</p>
         </div>
-        <div class="div-3">
-            Two Truths & A Lie: 1) There were no males born in the hospital the day I was born. 2) I have the OR6A2 gene
-            where cilatro tastes like soap. 3) My first job was blowing milk bubbles for a commercial when I was 3. 
+        <div id="div-3" class="flex-items">
+            <p><span>Two Truths and a Lie:</span> 1) I rode an elephant in West Virginia. 2) My first job was eating
+                grapes in a
+                commercial when I was 3 years old. 3) I'm a licensed massage therapist.</p>
         </div>
+        <footer>
+            <span class="material-symbols-outlined">
+                mood
+            </span>
+            <span class="material-symbols-outlined">
+                pets
+            </span>
+            <span class="material-symbols-outlined">
+                palette
+                </span>
+        </footer>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
